--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Kevin Hahn</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Kevin Hahn!</h1>
+				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:kevhahn11@gmail.com">email</a></li>
+        		<li><a href="https://github.com/kevinhahn11">github.com/kevinhahn11</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
