--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Kevin Hahn</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Kevin Hahn!</h1>
-				<p>I'm a UCLA CS & Linguistics sophomore. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:kevhahn11@gmail.com">email</a></li>
-        		<li><a href="https://github.com/kevinhahn11">github.com/kevinhahn11</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+	<h1>Hi there, I'm Kevin Hahn!</h1>
+	<p>I'm a UCLA CS & Linguistics student.<a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
